force-app/main/default/objects/Topic_Skill_Level__c/Topic_Skill_Level__c.object-meta.xml
<CustomObject>
    <label>Topic Skill Level</label>
    <nameField>
        <displayFormat>SL-{0000}</displayFormat>
        <label>Skill Level</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Topic Skill Levels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>