force-app/main/default/objects/Topic_Skill_Level__c/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <description>More context on current knowledge</description>
    <label>Context</label>
    <type>TextArea</type>
</CustomField>