force-app/main/default/objects/Topic_Skill_Level__c/fields/Current_Level__c.field-meta.xml
<CustomField>
    <fullName>Current_Level__c</fullName>
    <label>Current Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 - Know nothing</fullName>
            </value>
            <value>
                <fullName>1 - I can spell it</fullName>
            </value>
            <value>
                <fullName>2 - I&#39;ve read about it</fullName>
            </value>
            <value>
                <fullName>3 - I can present on it with preparation</fullName>
            </value>
            <value>
                <fullName>4 - This is my jam</fullName>
            </value>
            <value>
                <fullName>5 - Known as an expert amongst my peers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>