force-app/main/default/objects/Topic_Skill_Level__c/fields/Deadline__c.field-meta.xml
<CustomField>
    <fullName>Deadline__c</fullName>
    <description>Deadline for action</description>
    <label>Deadline</label>
    <type>Date</type>
</CustomField>