force-app/main/default/objects/Topic_Skill_Level__c/fields/Person__c.field-meta.xml
<CustomField>
    <fullName>Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Person</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Topic_Skill_Levels</relationshipName>
    <type>Lookup</type>
</CustomField>