force-app/main/default/objects/Topic_Skill_Level__c/fields/Skill_Level__c.field-meta.xml
<CustomField>
    <fullName>Skill_Level__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Skill Level</label>
    <referenceTo>Skill_Level__c</referenceTo>
    <relationshipLabel>Topic Skill Levels</relationshipLabel>
    <relationshipName>Topic_Skill_Levels</relationshipName>
    <type>Lookup</type>
</CustomField>